# ailog

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_en.md  cli.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
ailog/: __init__.py  cli.py  sync.py
ailog/bridge/: ghostguard.py  localchain.py
ailog/core/: __init__.py  models.py
ailog/exporters/: __init__.py  base.py  html.py  notion.py  obsidian.py  pdf.py
ailog/importers/: bilibili.py  chatgpt.py  claude.py  gemini.py  notion.py  youtube.py
ailog/search/: engine.py
bridge/: __init__.py  filebrain.py  ghostguard.py
importers/: __init__.py  base.py  deepseek.py  generic_json.py  youtube.py
search/: cli.py
spec/: FORMAT.md
tests/: __init__.py  test_bridge.py  test_chatgpt_importer.py  test_claude_importer.py  test_deepseek_importer.py  test_gemini_importer.py  test_html_exporter.py  test_localchain_bridge.py  test_notion_exporter.py  test_notion_importer.py  test_obsidian_exporter.py  test_search.py  test_video_importers.py
tests/fixtures/: bilibili_subtitles.json  chatgpt_conversations.json  claude_conversations.json  deepseek_conversations.json  gemini_conversations.json  sample.srt  youtube_transcript.json
